# realtime-event-engine

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: throughput_bench.cpp
docs/: architecture.md
src/: main.cpp
src/core/: concurrent_queue.hpp  event.hpp  logger.cpp  logger.hpp  thread_pool.cpp  thread_pool.hpp
src/domain/: auth_service.cpp  auth_service.hpp  entity_state.hpp  session_registry.cpp  session_registry.hpp
src/network/: framing.cpp  framing.hpp  server.cpp  server.hpp  session.cpp  session.hpp
src/pipeline/: event_router.cpp  event_router.hpp  pipeline_context.hpp
src/pipeline/handlers/: auth_handler.cpp  auth_handler.hpp  broadcast_handler.cpp  broadcast_handler.hpp  ihandler.hpp  state_handler.cpp  state_handler.hpp
src/storage/: async_writer.cpp  async_writer.hpp  file_storage.cpp  istorage.hpp
tests/: test_concurrent_queue.cpp  test_event_router.cpp  test_session_registry.cpp  test_thread_pool.cpp
